[package]
name = "ncrs"
version = "0.0.1"
authors = [
    "Graham Cox <graham@grahamcox.co.uk>"
] 
description = "Rust wrapper around the NCurses library"

[features]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false

[lib]
name = "ncrs"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false

[dependencies.ncurses]
git = "https://github.com/jeaye/ncurses-rs"

